--- a/app/views/user/tweets/_comment.html.erb
+++ b/app/views/user/tweets/_comment.html.erb
@@ -1,17 +1,21 @@
-<div>
-  <div style="display: flex; flex-direction: column; border-bottom-style: double; border-bottom-width: 2px;">
-    <div style="display: flex; align-items: center; justify-content: space-between;">
+<% @tweet.comments.each do |comment| %>
+  <div class="p-3">
+    <div style="display: flex; flex-direction: column; border-bottom-style: double; border-bottom-width: 2px;" class="p-3">
       <div style="display: flex; align-items: center;">
-        <% @tweet.comments.each do |comment| %>
-          <%= image_tag @user.get_profile_image(50,50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
-          <div class="ml-3"><%= @user.username %></div>
-          <div class="ml-3"><%= comment.comment %></div>
-          <%= comment.created_at.strftime('%Y/%m/%d') %>
-          <% if comment.user == current_user %>
-            <%= link_to "削除", tweet_comment_path(comment.tweet,comment), method: :delete %>
-          <% end %>
-        <% end %>
+        <%= image_tag comment.user.get_profile_image(50, 50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
+        <div class="ml-3"><%= comment.user.username %></div>
       </div>
-    </div> 
+      <div class="mt-5 mb-5 ml-5 p-3">
+        <div class="ml-3"><%= comment.comment %></div>
+      </div>
+      <div class="ml-3 mr-3">
+        <div style="display: flex; justify-content: flex-end; align-items: center;"> <!-- 右寄せ -->
+          <div style="margin-left: auto;"> <!-- 左寄せ -->
+            <div class="mr-3"><%= link_to "削除", tweet_comment_path(comment.tweet, comment), method: :delete if comment.user == current_user %></div>
+          </div>
+          <div><%= comment.created_at.strftime("%Y/%m/%d %H:%M") %></div> <!-- 日付 -->
+        </div>
+      </div>
+    </div>
   </div>
-</div>
+<% end %>
