--- a/app/views/user/tweets/_tweets.html.erb
+++ b/app/views/user/tweets/_tweets.html.erb
@@ -36,6 +36,10 @@
                       <% end %>
                     </div>
                     <div style="margin-left: auto;">
+                      <% if tweet.user == current_user %>
+                          <%= link_to "編集", edit_tweet_path(tweet.id), class: "mr-1" %>
+                          <%= link_to "削除", tweet_path(tweet.id), method: :delete, data: { confirm: "Are you sure?" }, class: "mr-1" %>
+                      <% end %>
                       <span class="tweet-date">
                         <%= tweet.created_at.strftime("%Y/%m/%d %H:%M") %>
                       </span>
