--- a/app/views/user/tweets/show.html.erb
+++ b/app/views/user/tweets/show.html.erb
@@ -2,46 +2,48 @@
   <div class="row">
     <div class="container px-5 px-sm-0">
       <div style="box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 10px; border-radius: 10px; margin-bottom: 20px;">
-        <div style="display: flex; flex-direction: column; border-bottom-style: double; border-bottom-width: 2px;">
-          <div style="display: flex; align-items: center; justify-content: space-between;">
-            <div style="display: flex; align-items: center;">
-              <%= image_tag @user.get_profile_image(50,50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
-              <div class="ml-3"><%= @user.username %></div>
-            </div>
-          </div> 
-          <div class="mt-5 mb-5 ml-5">
-            <%= @tweet.content %>
-          </div> 
-          <div class="ml-3 mr-3">
-            <div style="display: flex; justify-content: flex-start;">
-              <div>
-                <% if @tweet.liked_by?(current_user) %>
-                  <p>
-                    <%= link_to tweet_like_path(tweet), method: :delete do %>
-                      <i class="fa-solid fa-heart"></i>
-                      <span class="like-count"><%= tweet.likes.count %></span>
-                    <% end %>
-                  </p>
-                <% else %>
-                  <p>
-                    <%= link_to tweet_like_path(@tweet), method: :post do %>
-                      <i class="fa-regular fa-heart"></i>
-                      <span class="like-count"><%= @tweet.likes.count %></span> 
-                    <% end %>
-                  </p>
-                <% end %>
+        <div class="p-3">
+          <div style="display: flex; flex-direction: column; border-bottom-style: double; border-bottom-width: 2px;">
+            <div style="display: flex; align-items: center; justify-content: space-between;">
+              <div style="display: flex; align-items: center;">
+                <%= image_tag @user.get_profile_image(50,50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
+                <div class="ml-3"><%= @user.username %></div>
               </div>
-              <div class="mx-3"><span>|</span></div>
-              <div>
-                <%= link_to tweet_path(@tweet.id) do %>
-                  <i class="fa-regular fa-comment-dots"></i>
-                  <span class="comment-count"><%= @tweet.comments.count %></span>
-                <% end %>
-              </div>
-              <div style="margin-left: auto;">
-                <span class="tweet-date">
-                  <%= @tweet.created_at.strftime("%Y/%m/%d %H:%M") %>
-                </span>
+            </div> 
+            <div class="mt-5 mb-5 ml-5">
+              <%= @tweet.content %>
+            </div> 
+            <div class="ml-3 mr-3">
+              <div style="display: flex; justify-content: flex-start;">
+                <div>
+                  <% if @tweet.liked_by?(current_user) %>
+                    <p>
+                      <%= link_to tweet_like_path(tweet), method: :delete do %>
+                        <i class="fa-solid fa-heart"></i>
+                        <span class="like-count"><%= tweet.likes.count %></span>
+                      <% end %>
+                    </p>
+                  <% else %>
+                    <p>
+                      <%= link_to tweet_like_path(@tweet), method: :post do %>
+                        <i class="fa-regular fa-heart"></i>
+                        <span class="like-count"><%= @tweet.likes.count %></span> 
+                      <% end %>
+                    </p>
+                  <% end %>
+                </div>
+                <div class="mx-3"><span>|</span></div>
+                <div>
+                  <%= link_to tweet_path(@tweet.id) do %>
+                    <i class="fa-regular fa-comment-dots"></i>
+                    <span class="comment-count"><%= @tweet.comments.count %></span>
+                  <% end %>
+                </div>
+                <div style="margin-left: auto;">
+                  <span class="tweet-date">
+                    <%= @tweet.created_at.strftime("%Y/%m/%d %H:%M") %>
+                  </span>
+                </div>
               </div>
             </div>
           </div>
