--- a/app/views/user/registrations/edit.html.erb
+++ b/app/views/user/registrations/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="container px-5 px-sm-0">
       <div style="box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 10px; border-radius: 10px; margin-bottom: 20px;">
         <div class="p-3">
-          <h2>ユーザー情報編集 <%= resource_name.to_s.humanize %></h2>
+          <h2>ユーザー情報編集</h2>
 
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
             <%= render "devise/shared/error_messages", resource: resource %>
